<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/advertisement_menu_navigation"
          android:title="@string/advertisement_mn"
          android:orderInCategory="1"

         />
    <item android:id="@+id/advertisement_moderation_menu_navigation"
          android:title="@string/advertisement_moderation_mn"
          android:orderInCategory="1"

            />
    <item android:id="@+id/add_menu_navigation"
          android:title="@string/add_mn"
          android:orderInCategory="1"

            />
    <item android:id="@+id/search_menu_navigation"
          android:title="@string/search_mn"
          android:orderInCategory="1"

            />
    <item android:id="@+id/settings_menu_navigation"
          android:title="@string/settings_mn"
          android:orderInCategory="1"

            />
    <item android:id="@+id/exit_menu_navigation"
        android:title="@string/exit_mn"
        android:orderInCategory="1"

        />
</menu>