<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logotip"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="vertical"
            android:layout_gravity="center">
            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:hint="@string/av_login"
                android:id="@+id/edittext_login" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:hint="@string/av_password"
                android:inputType="textPassword"
                android:id="@+id/edittext_password" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/av_enter"
                android:id="@+id/button_enter"
                android:onClick="onClick"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/av_registration"
                android:textColor="@color/av_registration"
                android:id="@+id/textview_registration"
                android:clickable="true"
                android:onClick="onClick"
                android:layout_gravity="center"
                android:textSize="20dp"/>
        </LinearLayout>
</LinearLayout>